fixed spacing

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -285,7 +285,7 @@
 
 .featuresSection {
   background-color: #f9fafb;
-  padding: 6rem 1rem;
+  padding: 6rem 0;
 }
 .feature-card {
   border-radius: 0.75rem;
